<resources>
    <string name="app_name">CriminalIntent3</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="confirm_button">Confirm</string>
    <string name="severity_lvl">Severity Level</string>
</resources>
